bugfixes, added stack overflow careers link

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -16,7 +16,7 @@ header
 
 .prefix
   display: inline-block
-  width: 125px
+  width: 150px
 
 .container
   margin-left: 60px
